--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,24 +1,27 @@
 attrs==21.4.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
-click==8.1.2
-Flask==2.1.1
+click==8.0.4
+dataclasses==0.8
+flasgger==0.9.5
+Flask==2.0.3
 flask-marshmallow==0.14.0
 idna==3.3
-importlib-metadata==4.11.3
-iniconfig==1.1.1
-itsdangerous==2.1.2
-Jinja2==3.1.1
-MarkupSafe==2.1.1
-marshmallow==3.15.0
-packaging==21.3
-pluggy==1.0.0
-py==1.11.0
-pyparsing==3.0.7
-pytest==7.1.1
+importlib-metadata==4.8.3
+itsdangerous==2.0.1
+Jinja2==3.0.3
+jsonschema==3.2.0
+MarkupSafe==2.0.1
+marshmallow==3.14.1
+mistune==2.0.2
+prometheus-client==0.13.1
+prometheus-flask-exporter==0.19.0
+pyrsistent==0.18.0
+pytest==7.0.1
+PyYAML==6.0
 requests==2.27.1
 six==1.16.0
-tomli==2.0.1
+typing_extensions==4.1.1
 urllib3==1.26.9
-Werkzeug==2.1.1
-zipp==3.8.0
+Werkzeug==2.0.3
+zipp==3.6.0
